# mexico-traffic-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md
src/mexico_traffic_monitor/: __init__.py  __main__.py  app.py  config.py  models.py  providers.py  ui.py
tests/: test_demo_provider.py
